Add afbeelding gallery voor na slider

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -82,3 +82,4 @@ Text Domain: myproject
 @import 'plugins/slick';
 @import 'plugins/wpml';
 @import 'plugins/menugrid';
+@import 'plugins/img-comparison-slider';
