--- a/templates/pagebuilder/foto-gallery.twig
+++ b/templates/pagebuilder/foto-gallery.twig
@@ -1,29 +1,65 @@
 <section class="section{{ sectionno }} mod-foto gallery d-flex align-items-center bg-{{ item.achtergrond }}">
-	<div class="container">
-		<div class="row">
-			{% for item in item.afbeeldingen %}
-				{% if item.groot %}
-					<div class="col-12" data-aos="fade-up">
-						{% if item.type == 'video' %}
-							<div class="video-container mb-5 {% if item.schaduw %} with-shadow {% endif %}">
-								{{ item.video }}
-							</div>
-						{% else %}
-							<img class="{% if item.schaduw %} with-shadow {% endif %}" src="{{ Image(item.afbeelding).src|resize(1920) }}" srcset="{{ Image(item.afbeelding).srcset }}">
-						{% endif %}
-					</div>
-				{% else %}
-					<div class="col-md-6" data-aos="fade-up">
-						{% if item.type == 'video' %}
-							<div class="video-container mb-5 {% if item.schaduw %} with-shadow {% endif %}">
-								{{ item.video }}
-							</div>
-						{% else %}
-							<img class="{% if item.schaduw %} with-shadow {% endif %}" src="{{ Image(item.afbeelding).src|resize(768) }}">
-						{% endif %}
-					</div>
-				{% endif %}
-			{% endfor %}
-		</div>
+  <div class="container">
+	<div class="row">
+	  {% for item in item.afbeeldingen %}
+		{% if item.groot %}
+		  <div class="col-12" data-aos="fade-up">
+			{% if item.type == 'video' %}
+			  <div class="video-container mb-5 {% if item.schaduw %} with-shadow {% endif %}">
+				{{ item.video }}
+			  </div>
+
+			{% elseif item.type == 'afbeelding_voorna' %}
+			  <img-comparison-slider class="mb-5{% if item.schaduw %} with-shadow{% endif %}">
+				<img slot="first"
+					 src="{{ Image(item.afbeelding).src|resize(1920) }}"
+					 srcset="{{ Image(item.afbeelding).srcset }}"
+					 alt="{{ Image(item.afbeelding).alt|default('Voor') }}"
+					 loading="lazy" decoding="async">
+				<img slot="second"
+					 src="{{ Image(item.afbeelding_na).src|resize(1920) }}"
+					 srcset="{{ Image(item.afbeelding_na).srcset }}"
+					 alt="{{ Image(item.afbeelding_na).alt|default('Na') }}"
+					 loading="lazy" decoding="async">
+			  </img-comparison-slider>
+
+			{% else %}
+			  <img class="{% if item.schaduw %} with-shadow {% endif %}"
+				   src="{{ Image(item.afbeelding).src|resize(1920) }}"
+				   srcset="{{ Image(item.afbeelding).srcset }}"
+				   alt="{{ Image(item.afbeelding).alt|default('') }}"
+				   loading="lazy" decoding="async">
+			{% endif %}
+		  </div>
+
+		{% else %}
+		  <div class="col-md-6" data-aos="fade-up">
+			{% if item.type == 'video' %}
+			  <div class="video-container mb-5 {% if item.schaduw %} with-shadow {% endif %}">
+				{{ item.video }}
+			  </div>
+
+			{% elseif item.type == 'afbeelding_voorna' %}
+			  <img-comparison-slider class="mb-5{% if item.schaduw %} with-shadow{% endif %}">
+				<img slot="first"
+					 src="{{ Image(item.afbeelding).src|resize(768) }}"
+					 alt="{{ Image(item.afbeelding).alt|default('Voor') }}"
+					 loading="lazy" decoding="async">
+				<img slot="second"
+					 src="{{ Image(item.afbeelding_na).src|resize(768) }}"
+					 alt="{{ Image(item.afbeelding_na).alt|default('Na') }}"
+					 loading="lazy" decoding="async">
+			  </img-comparison-slider>
+
+			{% else %}
+			  <img class="{% if item.schaduw %} with-shadow {% endif %}"
+				   src="{{ Image(item.afbeelding).src|resize(768) }}"
+				   alt="{{ Image(item.afbeelding).alt|default('') }}"
+				   loading="lazy" decoding="async">
+			{% endif %}
+		  </div>
+		{% endif %}
+	  {% endfor %}
 	</div>
+  </div>
 </section>
