--- a/assets/scss/plugins/_img-comparison-slider.scss
+++ b/assets/scss/plugins/_img-comparison-slider.scss
@@ -1,5 +1,8 @@
 img-comparison-slider {
   visibility: hidden;
+  img {
+    margin: 0 !important;
+  }
 }
 
 img-comparison-slider [slot='second'] {
