--- a/assets/scss/common/_colors.scss
+++ b/assets/scss/common/_colors.scss
@@ -26,6 +26,18 @@
   }
 }
 
+.bg-lightgreen {
+  background-color: $lightgreen;
+  .btn-light:not(:disabled):not(.disabled) {
+	  background-color:#fff;
+	  border-color: #fff;
+	  &:hover {
+		  background-color: $grey;
+			border-color: $grey;
+	  }
+  }
+}
+
 
 .bg-grey {
   background-color: $grey;
