--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -17,6 +17,8 @@ $chalkgrey: #2C2C2C;
 $blue: #00ACFF;
 $blueaccent: #007EBA;
 
+$lightgreen: #ADE9AD;
+$freshgreen: #00B901;
 $green: #1B8B82;
 $greenaccent: #1B8B82;
 
