--- a/assets/css/gutenberg.css
+++ b/assets/css/gutenberg.css
@@ -176,3 +176,46 @@
   width: 100%;
   margin-bottom: 20px;
 }
+
+.gb-keypoints {
+  background: #E4F7FF;
+  padding: 10px 25px 20px 25px;
+  border-radius: 20px 0 20px 0;
+  border: 1px solid #00ACFF;
+}
+.gb-keypoints h3 {
+  margin-bottom: 20px;
+}
+.gb-keypoints ul {
+  list-style-type: none;
+  margin: -15px 0 0 0;
+  padding: 0;
+}
+.gb-keypoints ul li {
+  position: relative;
+  margin: 0 0 0 40px;
+  border-top: 1px solid #fff;
+  padding: 10px 0;
+  min-height: 30px;
+}
+.gb-keypoints ul li p {
+  margin-bottom: 0;
+}
+.gb-keypoints ul li:first-child {
+  border: 0;
+}
+.gb-keypoints ul li i {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -40px;
+  width: 28px;
+  height: 28px;
+  background: #fff;
+  border-radius: 100px;
+  text-align: center;
+  line-height: 28px;
+  display: inline-block;
+  color: #00ACFF;
+  font-size: 12px;
+}
