--- a/assets/scss/common/_base.scss
+++ b/assets/scss/common/_base.scss
@@ -53,6 +53,10 @@ figcaption {
     } 
 }
 
+.mb-30 {
+  margin-bottom: 30px !important;
+}
+
 input[type=text],
 input[type=email],
 input[type=user],
