--- a/templates/pagebuilder/content.twig
+++ b/templates/pagebuilder/content.twig
@@ -43,7 +43,7 @@
 		{% if item.linkblok_tekst %}
 			<div class="row">
 				<div class="col-md-10 col-lg-8 offset-lg-2">
-					<div class="mod-link">
+					<div class="mod-link text-dark">
 						<div class="row">
 							<div class="col-auto">
 								<img src="
