--- a/templates/pagebuilder/keypoints.twig
+++ b/templates/pagebuilder/keypoints.twig
@@ -19,7 +19,7 @@
 				{% if item.lead %}
 					<div class="lead">{{ item.lead }}</div>
 				{% endif %}
-				<div class="mod-keypoints gb-keypoints">
+				<div class="mod-keypoints gb-keypoints bg-lightblue">
 					<h3>{{ item.keypoints_titel }}</h3>
 					{{ item.keypoints_tekst }}
 					{% if item.keypoints_lijst %}
